--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <img src="images/Corona.jpg" alt="Smiley face">
 
 
-
+<div class="box">
 <form action='' id="stateform">
-  <label for="state">Please Select Your State</label><br>
+  <label for="state">Please Click Below to Select Your State</label><br><br>
     <select id="state-dropdown" name="state">
     </select>
-  <br><input type="submit" value="Submit">
+  <br><input type="submit" value="Submit" class="submit">
 </form>
+</div>
 
 
-
-   <h1>Updates</h1>
+   
 
 
       <div id="destination">
